[project]
name = "dawa-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "google-genai>=1.72.0",
    "google-generativeai>=0.8.6",
    "imagekitio>=5.3.0",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.49",
]
